making folders for css

--- a/spin/spin.html
+++ b/spin/spin.html
@@ -1,3 +1,5 @@
+<link href="../assets/spin.css" rel="stylesheet">
+
 <div class="container">
     <h1>This takes Forever To Load </h1>
     <div class="loader"></div>
