adding html and css file

--- a/buttons/bt.html
+++ b/buttons/bt.html
@@ -1,4 +1,4 @@
-<link href="./bt.css" rel="stylesheet">
+<link href="../assets/bt.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 <h1>this button does nothing</h1>
 <button class="btn">click here</button>
