--- a/landing/index.html
+++ b/landing/index.html
@@ -13,13 +13,20 @@
     <header>
         <h1><a href="#">Mountain Travel</a></h1>
         <nav>
-            <li><a href="#">Tours</a></li>
+            <li><a href="#">Tours   </a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
 
         </nav>
     </header>
-
+<section class="hero">
+    <div class="background-image" style="background-image: url(../assets/images/lake-2594425_960_720.jpg);"></div>
+    <div class="hero-content-area">
+        <h1>Mountain Travel</h1>
+        <h3>Unmissable Adventure Tours Around The World</h3>
+        <a class="btn" href="#" >Contact Us Now</a>
+    </div>
+</section>
 </body>
 
 </html>
