another section with user photos

--- a/landing/index.html
+++ b/landing/index.html
@@ -27,6 +27,20 @@
         <a class="btn" href="#" >Contact Us Now</a>
     </div>
 </section>
+<section class="destinations">
+    <h3 class="title">Some Of Our Destinations</h3>
+    <p>Tired Of Oceans?are plains are too plain?come along with us to one of our mountain adventures.
+        here are some pictures by people who have elevated with us .
+    </p>
+<hr>
+    <ul class="grid">
+        <li class="small" style="background-image:url(../assets/images/ladakh-397883_960_720.jpg) "></li>
+        <li class="large" style="background-image:url(../assets/images/ladakh-397883_960_720.jpg) "></li>
+        <li class="large" style="background-image:url(../assets/images/ladakh-397883_960_720.jpg) "></li>
+        <li class="small" style="background-image:url(../assets/images/ladakh-397883_960_720.jpg) "></li>
+
+    </ul>
+</section>
 </body>
 
 </html>
