--- a/landing/index.html
+++ b/landing/index.html
@@ -6,6 +6,7 @@
 
 <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 <link rel="stylesheet" href="../assets/index.css">
 </head>
 
@@ -39,6 +40,39 @@
         <li class="large" style="background-image:url(../assets/images/ladakh-397883_960_720.jpg) "></li>
         <li class="small" style="background-image:url(../assets/images/thumb-1920-549143.jpg) "></li>
 
+    </ul>
+</section>
+<section class="packages">
+    <h3 class="title">Tour Packages</h3>
+    <p>We offer a vareity of packages .Whether you have climbed mount everest or don't even  know what a mountain is,
+        we have got the perfect vacation for you.
+    </p>
+    <hr>
+    <ul class="grid">
+        <li>
+            <i class="fa fa-compass fa-4x"></i>
+            <h4>Guided Trips</h4>
+            <p>Looking For Complete Experience?Take a Tour with one of our experts.
+                They will show you the secrets that you are going to miss otherwise </p>
+        </li>
+        <li>
+            <i class="fa fa-camera-retro fa-4x"></i>
+            <h4>Photo Trips</h4>
+            <p>Want to experience natures beauty without anyoing exercises?  
+                take a photo tour with one of our tour buses</p>
+        </li>   
+        <li>
+            <i class="fa fa-bicycle fa-4x"></i>
+            <h4>Bike Trips</h4>
+            <p>If bicycles are more your speed, consider taking a tour through one of our mountain bike paths.
+                We will provide you the bikes and lunch too. </p>
+        </li>  
+         <li>
+            <i class="fa fa-flag-checkered fa-4x"></i>
+            <h4>Racing Tracks</h4>
+            <p>Got some compitetive spirit? Consider taking one of our mountain marathons.
+                Try to reach the mountains before anyone else.</p>
+        </li>
     </ul>
 </section>
 </body>
